2009-08-09 09:42  rsbivand

	* R/gdal.R, src/gdal-bindings.cpp: altered CPL default to use
	  REprintf

2009-08-08 20:48  rsbivand

	* src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog: altered CPL
	  default to use REprintf

2009-08-08 17:16  rsbivand

	* DESCRIPTION, R/gdal.R, src/gdal-bindings.cpp, ChangeLog,
	  inst/ChangeLog: allowing error handler switch for opening GDAL
	  (for AIG driver case) - suggested by Even Rouault

2009-07-14 11:19  rsbivand

	* man/writeOGR.Rd: KML WGS84 notes added

2009-07-12 13:15  rsbivand

	* ChangeLog, inst/ChangeLog, man/CRS-class.Rd,
	  man/spTransform-methods.Rd: tidy

2009-07-07 20:40  rsbivand

	* DESCRIPTION, R/ogr.R, R/ogr_sp.R, man/readOGR.Rd,
	  src/ogrsource.cpp: handling deleted features

2009-06-26 13:28  rsbivand

	* configure.win, inst/README.windows, man/project.Rd: tidy

2009-06-26 11:13  rsbivand

	* man/readOGR.Rd, inst/vectors/trin_inca_pl03.dbf,
	  inst/vectors/trin_inca_pl03.shp, inst/vectors/trin_inca_pl03.shx,
	  ChangeLog, inst/ChangeLog: adding NULL example

2009-06-26 10:56  rsbivand

	* R/ogr.R, src/ogr_geom.cpp, ChangeLog, inst/ChangeLog: added
	  destroy DS object to readOGR and ogrInfo to permit reading many
	  files

2009-06-26 10:08  rsbivand

	* ChangeLog, inst/ChangeLog: adding NULL, empty geometry, ring
	  closure handling

2009-06-26 10:04  rsbivand

	* R/ogr.R, R/ogr_sp.R, inst/vectors/pgnullGPS.gpx, man/readOGR.Rd,
	  src/ogr_geom.cpp, src/ogrsource.cpp, ChangeLog, inst/ChangeLog,
	  DESCRIPTION: adding NULL, empty geometry, ring closure handling

2009-06-25 18:09  rsbivand

	* inst/vectors/pgnullGPS.gpx: GPX example

2009-06-25 15:03  rsbivand

	* ChangeLog, DESCRIPTION, R/ogr_sp.R, inst/vectors/test_trk2.gpx,
	  src/ogr_geom.cpp, src/ogrsource.cpp, inst/ChangeLog: adding
	  DateTime -> String reading

2009-06-24 20:28  rsbivand

	* src/ogrsource.cpp: Date handling

2009-04-16 18:05  rsbivand

	* DESCRIPTION, R/ogr_sp.R, man/readOGR.Rd: third coordinate in OGR
	  points
