@@ -45,7 +45,7 @@ Class \code{"GDALMajorObject"}, directly.
 }
 \usage{
 GDAL.close(dataset)
-GDAL.open(filename, read.only = TRUE)
+GDAL.open(filename, read.only = TRUE, silent=FALSE)
 getDriver(dataset)
 %displayDataset(x, offset = c(0, 0), region.dim = dim(x),
 %                           reduction = 1, band = NULL, col = NULL,
@@ -70,6 +70,7 @@ getGeoTransFunc(dataset)
 % \item{}{}
 \item{read.only}{A logical flag indicating whether to open the file as a
   \code{GDALReadOnlyDataset} or as a writable \code{GDALDataset}}
+\item{silent}{ logical; if TRUE, comment and non-fatal CPL driver errors suppressed }
 }
 \details{
 \code{GDAL.open} and \code{GDAL.close} are shorter versions of \code{new("GDALReadOnlyDataset", ...)} and \code{closeDataset()}. Because \code{GDAL.close} through \code{closeDataset()} uses the finalization mechanism to destroy the handles to the dataset and its driver, messages such as:
