@@ -1,7 +1,14 @@
+2009-08-09 15:28  rsbivand
+
+	* DESCRIPTION, R/gdal.R, R/sgdf_gdal.R, R/sp_gdal.R,
+	  man/GDALDataset-class.Rd, man/GDALReadOnlyDataset-class.Rd,
+	  man/SpatialGDAL-class.Rd, man/readGDAL.Rd, src/gdal-bindings.cpp:
+	  altered CPL default to use REprintf
+
 2009-08-09 09:42  rsbivand
 
-	* R/gdal.R, src/gdal-bindings.cpp: altered CPL default to use
-	  REprintf
+	* R/gdal.R, src/gdal-bindings.cpp, ChangeLog, inst/ChangeLog:
+	  altered CPL default to use REprintf
 
 2009-08-08 20:48  rsbivand
 
